Фикс Thread
